--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: My Awesome Course Website
-description: A description of my course.
+title: Mikey Clark
+description: Mikey Clark's website
 theme: minima
